<resources>
    <string name="app_name">SmadLab2</string>
    <string name="enter_numbers">Enter numbers of your set here</string>
    <string name="average">Average</string>
    <string name="mode">Mode</string>
    <string name="median">Median</string>
    <string name="sample_size">Sample size</string>
    <string name="variance">Variance</string>
    <string name="mean_square_division">Mean square division</string>
    <string name="corrected_variance">Corrected variance</string>
    <string name="corrected_mean_square_division">Corrected mean square division</string>
    <string name="variation">Variation</string>
    <string name="asymmetry">Assymetry</string>
    <string name="kurtosis">Kurtosis</string>
    <string name="starting_point">Starting point</string>
    <string name="central_point">Central point</string>
    <string name="error_invalid_input">Invalid numbers input</string>
    <string name="input_too_short">Input too short</string>
    <string name="input_power">Input power</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
